@@ -224,3 +224,11 @@ span.topic-icon {
 .comment_delete .af-button-small span,
 .post_delete .af-button-small span {
 }
+
+/* Jump to top */
+.forum-jump-links .af-button-small {
+}
+
+.forum-jump-links .af-button-small span {
+}
+
